fix z-index

--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -73,6 +73,5 @@
 }
 
 .map {
-  z-index: 1;
   background-color: burlywood;
 }
